fixed overflow

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,15 +1,3 @@
-html * {
-  box-sizing: border-box;
-}
-
-body {
-  color: #fffff6;
-  font-family: 'Helvetica', sans-serif;
-  font-size: 16px;
-  text-align: center;
-  margin: 0;
-}
-
 p {
   margin: 0;
   line-height: 1.5em;
@@ -27,14 +15,11 @@ h1 {
 
 h2 {
   font-size: 1.5em;
-  padding-top: 1em;
 }
 
 h3 {
   font-size: 1.25em;
-  padding-top: .25em;
 }
-
 
 .gradient-container {
   background: linear-gradient(29deg, #3d5695, #ca9a83);
@@ -156,6 +141,7 @@ section {
   .project {
     display: flex;
     flex-direction: row;
+    justify-content: center;
   }
 
   .project h2 {
@@ -171,11 +157,12 @@ section {
   }
 
   .image {
-    display: block; 
+    display: block;
     flex-basis: 0%;
     flex-grow: 1;
     flex-shrink: 1;
     min-width: 0;
+    margin-bottom: 0;
   }
 
   .image > img {
@@ -187,14 +174,13 @@ section {
   }
 
   .content {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     flex-basis: 400px;
     flex-grow: 0;
     flex-shrink: 0;
-    padding-left: 40px;
-  }
-
-  #footer {
-    justify-content: space-between;
+    padding-left: 60px;
+    margin-bottom: 0;
   }
 }
