--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 footer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 0;
+  justify-content: space-around;
+  padding: 1em;
   margin: 0;
   color: #fffff6;
   background-color: #595959;
@@ -11,25 +11,11 @@ footer {
 
 footer h2 {
   font-size: 22px;
-  margin-bottom: 20px;
-}
-
-.contact {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin: 20px auto; 
-  align-items: center;
-  height: 100%;
+  margin: 0 0 5px 0;
 }
 
 .link-container {
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  width: 100vw;
-  align-content: center;
-  margin-bottom: 20px;
+  margin-top: 5px;
 }
 
 footer a {
@@ -59,15 +45,5 @@ footer a:nth-child(3) {
 
   footer h2 {
     font-size: 30px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  footer a {
-    font-size: 24px;
-  }
-
-  footer h2 {
-    font-size: 36px;
   }
 }
