--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,24 @@
-html {
-  height: 100%;
+html * {
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
+  color: #fffff6;
+  /* font-family: 'Muli'; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
   line-height: 1.4;
   font-weight: 400;
-  color: #fffff6;
-  height: 100%;
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
